scrollbar fixed

--- a/style/style.scss
+++ b/style/style.scss
@@ -46,6 +46,21 @@ a {
     text-decoration: none;
 }
 
+//  (remove ugly scrollbar)
+body::-webkit-scrollbar {
+    width: 0.19rem;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-track {
+    background: black;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: gray;
+    border-radius: 5px;
+}
+
 @import 'home';
 @import 'features';
 @import 'soon';
@@ -55,51 +70,66 @@ a {
     html {
         font-size: 50%;
     }
+
     nav {
         #logo {
             flex: 1;
         }
+
         ul {
             li {
                 margin-left: 5rem;
             }
         }
     }
+
     .showcase {
-        grid-template-columns: 10% 1fr 10% ;
+        grid-template-columns: 10% 1fr 10%;
+
         img {
             width: 100%;
             object-fit: contain;
         }
-        img, h2, .info {
+
+        img,
+        h2,
+        .info {
             grid-column: 2/3;
             text-align: center;
         }
     }
-    .features{
+
+    .features {
         align-items: center;
+
         h2 {
             margin: 5rem;
         }
+
         .cards {
             flex-direction: column;
             width: 80%;
+
             .card {
                 margin: 5rem 0rem;
             }
 
         }
     }
+
     .soon {
         overflow: hidden;
+
         img {
             width: 70%;
         }
+
         h2 {
             font-size: 5rem;
             text-align: center;
         }
     }
+
     .footer {
         h1 {
             flex: 1;
